--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="social">
 		<a href="https://twitter.com/Boopy_arbitrum"><i class="fa-brands fa-square-x-twitter"></i></a>
 		<a href="https://t.me/boopyportal"><i class="fa-brands fa-telegram"></i></a>
-		<a href="#"><i class="fa-solid fa-chart-line"></i></a>
+		<a href="https://dexscreener.com/arbitrum/0x2a665EE9C359b625eAb7dd4A51711DE22Dd47007"><i class="fa-solid fa-chart-line"></i></a>
 	</div>
 	<section id="pics">
 		<img width="350px" src="./assets/img/dog.png">
@@ -41,7 +41,7 @@ all taxes goes to rewards</br></br>
 
 
 
- ca:——— </br></br>
+ ca: 0x2a665EE9C359b625eAb7dd4A51711DE22Dd47007</br></br>
 		</div>
 
 		<div id="about">
